# Mist

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  mac-app.yml  release.yml
bench/results/: 2026-06-11-e2e-journal.md  2026-06-11-e2e-seed.md  2026-06-11-e2e-write.md  2026-06-11-harden.md  2026-06-12-cas-gates.md  2026-06-12-comparison.md  2026-06-12-e2e-write.md  2026-06-12-nfs41-gates.md  2026-06-12-perf-push.md  2026-06-12-perf-snapshot.md  2026-06-13-fsx-concurrency.md  2026-06-13-leak-hunt.md  2026-06-13-read-final.md  2026-06-13-read-push.md
crates/mist-bench/: Cargo.toml
crates/mist-bench/src/: fsx.rs  main.rs
crates/mist-cas/: Cargo.toml
crates/mist-cas/src/: lib.rs
crates/mist-cli/: Cargo.toml
crates/mist-cli/src/: main.rs
crates/mist-hostd/: Cargo.toml
crates/mist-hostd/src/: config.rs  config_writer.rs  conflicts.rs  control.rs  lib.rs  main.rs  mount.rs  resolve.rs  session.rs  sidestore.rs  surface.rs
crates/mist-hostd/tests/: fake_guest.rs  sidestore.rs
crates/mist-nfs/: Cargo.toml
crates/mist-nfs/examples/: probe41.rs  serve_fake.rs
crates/mist-nfs/fuzz/: Cargo.toml
crates/mist-nfs/fuzz/fuzz_targets/: parse_call.rs
crates/mist-nfs/src/: bufpool.rs  handle.rs  lib.rs  mount3.rs  nfs3.rs  rpc.rs  server.rs  surface.rs  xdr.rs
crates/mist-nfs/src/nfs41/: attrs.rs  mod.rs  state.rs
crates/mist-nfs/tests/: client_roundtrip.rs  mutations.rs  nfs41_roundtrip.rs
crates/mist-proto/: Cargo.toml
crates/mist-proto/fuzz/: Cargo.toml
crates/mist-proto/fuzz/fuzz_targets/: decode_ctl.rs  decode_event.rs  decode_rpc.rs  frame_header.rs
crates/mist-proto/src/: caps.rs  codec.rs  frame.rs  lib.rs  msg.rs  types.rs  validate.rs
crates/mist-proto/tests/: golden.rs  golden_vectors.txt  roundtrip.rs
crates/mist-replica/: Cargo.toml
crates/mist-replica/fuzz/: Cargo.toml
crates/mist-replica/fuzz/fuzz_targets/: rec_apply.rs
crates/mist-replica/src/: lib.rs
crates/mist-transport/: Cargo.toml
crates/mist-transport/src/: framed.rs  lib.rs
crates/mist-transport/tests/: loopback.rs
crates/mistd/: Cargo.toml
crates/mistd/src/: config.rs  lib.rs  main.rs
crates/mistd/src/linux/: applier.rs  fanotify.rs  handles.rs  identity.rs  journal.rs  mod.rs  rpc.rs  server.rs  shares.rs  walker.rs
crates/mistd/tests/: walker.rs
design/: 00-overview.md  01-architecture.md  02-protocol.md  03-guest-mistd.md  04-host-mistd.md  05-nfs-frontend.md  06-consistency.md  07-security.md  08-performance.md  09-release-status.md  10-testing.md  11-onboarding.md  ADR.md
docs/: install.md  mounting.md  pjdfstest-manifest.md  release.md  troubleshooting.md  tuning.md
packaging/: build-app.sh  com.mist.hostd.plist  install.sh  mist.rb  mistd.service  package-deb.sh  release.sh
packaging/Casks/: mist.rb
scripts/: bench-compare.sh  build-vmshim.sh  chaos-m6.sh  e2e-m2.sh  e2e-m3.sh  e2e-m4.sh  e2e.sh  m3-stack-up.sh  pjd-classify.sh  soak-m6.sh
swift/MistApp/: Package.swift
swift/MistApp/Resources/: Info.plist  Mist.entitlements  mist-mount-helper.entitlements
swift/MistApp/Resources/LaunchAgents/: dev.mist.hostd.plist
swift/MistApp/Resources/LaunchDaemons/: dev.mist.mount-helper.plist
swift/MistApp/Sources/MistApp/: AppModel.swift  HelperClient.swift  MenuView.swift  MistApp.swift  SettingsView.swift  Updater.swift  WizardView.swift
swift/MistApp/Sources/MistControl/: ControlClient.swift  Events.swift  Status.swift
swift/MistApp/Sources/MistHelperProtocol/: MountHelperProtocol.swift
swift/MistApp/Sources/MistMountHelper/: main.swift
swift/MistApp/Tests/MistControlTests/: StatusDecodeTests.swift
swift/MistBridge/: Package.swift
swift/MistBridge/Sources/MistBridge/: MistBridge.swift
swift/MistBridge/Sources/mist-vmshim/: main.swift
