[package]
name = "mist-cas"
description = "Content-addressed data cache for Mist: blob store + redb manifests + LRU eviction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = { workspace = true }
postcard = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
