[package]
name = "mist-cli"
description = "mist — control CLI for mist-hostd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mist"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
