[package]
name = "mist-hostd"
description = "Mist host daemon: VM sessions, snapshot assembler, replica, control API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mist-proto = { workspace = true }
mist-transport = { workspace = true }
mist-replica = { workspace = true }
mist-nfs = { workspace = true }
mist-cas = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
blake3 = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
