[package]
name = "mistd"
description = "Mist guest daemon: snapshot walker, change journal, contained applier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mist-proto = { workspace = true }
mist-transport = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true, features = ["pure"] } # cross-built to musl: no C toolchain
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true }
libc = { workspace = true }
tokio-vsock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mist-replica = { workspace = true }

[lints]
workspace = true
