[package]
name = "mist-nfs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mist-nfs = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "parse_call"
path = "fuzz_targets/parse_call.rs"
test = false
doc = false
bench = false

[workspace]
