[package]
name = "mist-replica-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mist-proto = { path = "../../mist-proto" }
mist-replica = { path = ".." }

[[bin]]
name = "rec_apply"
path = "fuzz_targets/rec_apply.rs"
test = false
doc = false
bench = false

[workspace]
